@@ -1,20 +1,22 @@
 package academy.devdojo.springboot2.service;
 
 import academy.devdojo.springboot2.domain.Anime;
-import academy.devdojo.springboot2.repository.AnimeRepository;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.ThreadLocalRandom;
 
 @Service
 public class AnimeService {
-    private final List<Anime> animes = Arrays.asList(
-            Anime.builder().id(1L).name("Berserk").build(),
-            Anime.builder().id(2L).name("Boku no Hero").build()
-    );
+    private static List<Anime> animes;
+
+    static {
+        animes = new ArrayList<>(List.of(Anime.builder().id(1L).name("Berserk").build(),
+                Anime.builder().id(2L).name("Boku no Hero").build()));
+    }
     // private final AnimeRepository animeRepository;
 
     public List<Anime> listAll() {
@@ -27,5 +29,11 @@ public class AnimeService {
                 .filter(anime -> anime.getId().equals(id))
                 .findFirst()
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Anime not Found"));
+    }
+
+    public Anime save(Anime anime) {
+        anime.setId(ThreadLocalRandom.current().nextLong(3, 100000));
+        animes.add(anime);
+        return anime;
     }
 }
